--- a/templates/index.html
+++ b/templates/index.html
@@ -159,7 +159,7 @@
                 margin-bottom: 5%;
             }
             text{
-                font-size: .8em;
+                font-size: .7em;
                 text-align: left;
             }   
             p{
@@ -168,9 +168,9 @@
                 margin-top: 10%;
             }
             .des{
-                font-size: .8em;
+                font-size: .7em;
                 margin-top: 5%;
-                margin-bottom: 110%;
+                margin-bottom: 80%;
                 text-align: left;
                 margin-left: 2%;
             }
@@ -179,7 +179,7 @@
                 font-size: .6em;
                 margin-top: -9%;
                 text-align: center;
-                margin-left: -15%;
+                margin-left: -10%;
             }
             
             .search-bar{
@@ -237,6 +237,13 @@
             showLoader();
             document.getElementById('searchForm').submit();
         }
+    });
+
+    document.getElementById('prompt').addEventListener('click', function() {
+    document.querySelector('.search-container').classList.add('active');
+    setTimeout(function() {
+        document.querySelector('input').focus();
+    }, 500);
     });
     document.querySelector(".icon").addEventListener("click", function() {
         showLoader();
